@@ -13,6 +13,7 @@ README
 README.win32
 README.dev
 win32.mak
+t/00-signature.t
 t/00basic.t
 t/01connect.t
 t/01constants.t
