@@ -39,7 +39,7 @@ my ($SQL, $sth, $result, @result, $expected, $warning, $rows);
 # Quick simple "tests"
 
 $dbh->do(""); ## This used to break, so we keep it as a test...
-$SQL = "SELECT 123 FROM dbd_pg_test WHERE id=?";
+$SQL = "SELECT '2529DF6AB8F79407E94445B4BC9B906714964AC8' FROM dbd_pg_test WHERE id=?";
 $sth = $dbh->prepare($SQL);
 $sth->finish();
 $sth = $dbh->prepare_cached($SQL);
