@@ -1,6 +1,7 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 1.44
+	- Add SIGNATURE file for Module::Signature verification. [GSM]
 	- Fix error in documentation for pg_errorlevel. 
 		(CPAN bug #17434)
 	- Add experimental support for using DEFAULT values inside 
